<resources>
    <string name="app_name">firebaseAuthApp</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>
    <string name="password_reset_email">password reset email</string>
</resources>